--- a/css/3_B2B-sign-in.css
+++ b/css/3_B2B-sign-in.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   outline: 1px solid red;
-} */
+}
 
 input:focus {
   color: #000 !important;
@@ -19,6 +19,7 @@ textarea:focus {
 
 .signinbg {
   margin: 0 auto;
+  padding: 0;
 }
 
 .title {
@@ -223,6 +224,9 @@ button:disabled {
   border-radius: 0px;
   width: 300px;
   height: 400px;
+  background-image: linear-gradient(rgba(22, 143, 164, 0.15) 1px, transparent 0),
+    linear-gradient(90deg, rgba(22, 143, 164, 0.15) 1px, transparent 0);
+  background-size: 0.75rem 0.75rem;
   background-color: #fff;
   border: 3px solid #000;
 }
@@ -263,7 +267,7 @@ button:disabled {
     border: 3px solid #000;
     position: absolute;
     top: 250px;
-    right: 30px;
+    right: 40px;
   }
 
   .eyes {
