--- a/css/3_B2B-ticket-list.css
+++ b/css/3_B2B-ticket-list.css
@@ -130,6 +130,9 @@ table {
   border-radius: 0px;
   width: 300px;
   height: 400px;
+  background-image: linear-gradient(rgba(22, 143, 164, 0.15) 1px, transparent 0),
+    linear-gradient(90deg, rgba(22, 143, 164, 0.15) 1px, transparent 0);
+  background-size: 0.75rem 0.75rem;
   background-color: #fff;
   border: 3px solid #000;
 }
@@ -168,6 +171,35 @@ table {
   color: #000 !important;
 }
 
+/* 提醒小卡css 查閱訂單*/
+.checkmodal {
+  border-radius: 0px;
+  width: 300px;
+  height: 550px;
+  background-image: linear-gradient(rgba(22, 143, 164, 0.15) 1px, transparent 0),
+    linear-gradient(90deg, rgba(22, 143, 164, 0.15) 1px, transparent 0);
+  background-size: 0.75rem 0.75rem;
+  background-color: #fff;
+  border: 3px solid #000;
+}
+
+.event {
+  width: 240px;
+  height: 240px;
+}
+
+.eventimg {
+  width: 100%;
+  height: 100%;
+  background: url(../imgs/event/活動小圖/TPE-26.jpg.jpg) center no-repeat;
+  background-size: cover;
+  border: 3px solid #000;
+}
+
+.modal-text {
+  font-size: 16px;
+  font-weight: 700;
+}
 /* 頁碼 */
 .page {
   margin-top: 35px;
