sign-in-edit-file add

--- a/css/3_B2B-ticket-list.css
+++ b/css/3_B2B-ticket-list.css
@@ -191,7 +191,7 @@ table {
 .eventimg {
   width: 100%;
   height: 100%;
-  background: url(../imgs/event/event-sm/KHH-29.jpg.jpg) center no-repeat;
+  background: url(../imgs/event/event-sm/KHH-29.jpg) center no-repeat;
   background-size: cover;
   border: 3px solid #000;
 }
