--- a/css/4_productList.css
+++ b/css/4_productList.css
@@ -153,10 +153,48 @@ input:focus {
 
 /* 本週主打精選 */
 
-.week {
+/* .week {
     height: 300px;
+} */
+
+.intro-box {
+    height: 500px;
 }
 
+.intro-img {
+    margin-left: 150px;
+    height: 300px;
+    z-index: 1;
+}
+
+.intro-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+
+}
+
+.intro-img img:hover {
+    transform: scale(1.2, 1.2);
+}
+
+
+.intro-info {
+    height: 200px;
+    background-color: #4336A3;
+}
+
+.intro-info {
+    bottom: -40%;
+    right: 6%;
+}
+
+.intro-box .title {
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+/* 小標 */
 .section-title {
     height: 80px;
     background-color: #ED5B4C;
@@ -172,6 +210,12 @@ input:focus {
     background-color: #ED5B4C;
     border: 3px solid black;
 }
+
+.section-title-below p {
+    transform: rotate(5deg);
+    font-size: 1.5rem;
+}
+
 
 /* 商品列表 */
 
@@ -263,7 +307,7 @@ input:focus {
     /* -webkit-line-clamp: 2; */
 }
 
-.like {
+.like-link {
     bottom: 0;
     right: 10px;
     font-size: 2rem;
@@ -434,6 +478,179 @@ footer .letter-submit {
     font-size: 1rem;
 }
 
+/* 3D測試 */
+/* div#carousel {
+    perspective: 1200px;
+    padding-top: 10%;
+    font-size: 0;
+    margin-bottom: 3rem;
+    overflow: hidden;
+}
+
+figure#spinner {
+    transform-style: preserve-3d;
+    height: 300px;
+    transform-origin: 50% 50% -500px;
+    transition: 1s;
+}
+
+figure#spinner img {
+    width: 300px;
+    max-width: 425px;
+    position: absolute;
+    left: 30%;
+    transform-origin: 50% 50% -500px;
+    outline: 3px solid black;
+}
+
+figure#spinner img:nth-child(1) {
+    transform: rotateY(0deg);
+}
+
+figure#spinner img:nth-child(2) {
+    transform: rotateY(-45deg);
+}
+
+figure#spinner img:nth-child(3) {
+    transform: rotateY(-90deg);
+}
+
+figure#spinner img:nth-child(4) {
+    transform: rotateY(-135deg);
+}
+
+figure#spinner img:nth-child(5) {
+    transform: rotateY(-180deg);
+}
+
+figure#spinner img:nth-child(6) {
+    transform: rotateY(-225deg);
+}
+
+figure#spinner img:nth-child(7) {
+    transform: rotateY(-270deg);
+}
+
+figure#spinner img:nth-child(8) {
+    transform: rotateY(-315deg);
+}
+
+div#carousel~span {
+    color: #fff;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 2rem;
+    transition: 0.6s color;
+    position: relative;
+    margin-top: -6rem;
+    border-bottom: none;
+    line-height: 0;
+}
+
+div#carousel~span:hover {
+    color: #FFC024;
+    cursor: pointer;
+} */
+
+.flip-book {
+    height: 500px;
+
+}
+
+.containerA {
+    margin: 4% auto;
+    width: 210px;
+    height: 140px;
+    position: relative;
+    perspective: 1000px;
+}
+
+#carousel {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    animation: rotation 20s infinite linear;
+}
+
+#carousel:hover {
+    animation-play-state: paused;
+}
+
+#carousel figure {
+    display: block;
+    position: absolute;
+    width: 206px;
+    height: 166px;
+    left: 10px;
+    top: 50px;
+    background: white;
+    overflow: hidden;
+    border: solid 5px black;
+}
+
+figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#carousel figure:nth-child(9) {
+    transform: rotateY(0deg) translateZ(320px);
+}
+
+#carousel figure:nth-child(8) {
+    transform: rotateY(40deg) translateZ(320px);
+}
+
+#carousel figure:nth-child(7) {
+    transform: rotateY(80deg) translateZ(320px);
+}
+
+#carousel figure:nth-child(6) {
+    transform: rotateY(120deg) translateZ(320px);
+}
+
+#carousel figure:nth-child(5) {
+    transform: rotateY(160deg) translateZ(320px);
+}
+
+#carousel figure:nth-child(4) {
+    transform: rotateY(200deg) translateZ(320px);
+}
+
+#carousel figure:nth-child(3) {
+    transform: rotateY(240deg) translateZ(320px);
+}
+
+#carousel figure:nth-child(2) {
+    transform: rotateY(280deg) translateZ(320px);
+}
+
+#carousel figure:nth-child(1) {
+    transform: rotateY(320deg) translateZ(320px);
+}
+
+img {
+    /* -webkit-filter: grayscale(1); */
+    cursor: pointer;
+    transition: all .5s ease;
+}
+
+#carousel img:hover {
+    /* -webkit-filter: grayscale(0); */
+    transform: scale(1.2, 1.2);
+}
+
+@keyframes rotation {
+    from {
+        transform: rotateY(360deg);
+    }
+
+    to {
+        transform: rotateY(0deg);
+    }
+}
 
 /* ====== Ｍedia Query =============== */
 /* Extra small 超小 (576px 以下) */
