--- a/css/2_member-service.css
+++ b/css/2_member-service.css
@@ -38,6 +38,10 @@ body {
 }
 
 /* ----------form---------- */
+.section-title img {
+  width: 20vh;
+}
+
 .label{
   background-color: #168FA4;
   border: 3px solid #000;
