--- a/css/2_member-accunt-set.css
+++ b/css/2_member-accunt-set.css
@@ -37,6 +37,84 @@ html {
     margin-top: 40px;
   }
 
+  .long-clip-1 {
+    position: relative;
+  }
+
   .little-head {
     border-radius: 50%;
+    position: absolute;
+    top: 420px;
+    right: 470px;
+  }
+
+  .inputform {
+    margin: 35px auto 0;
+    padding: 0;
+  }
+
+  /* trouble為錯誤提醒 */
+.trouble {
+    position: absolute;
+    right: 10px;
+    top: 45px;
+    opacity: 0;
+    z-index: 1;
+  }
+  
+  .trouble2 {
+    display: none;
+    margin-top: 5px;
+    text-align: end;
+    opacity: 0;
+    color: #ff1000;
+  }
+
+  .inputbox {
+    margin-top: 12px;
+    width: 100%;
+    height: 50px;
+    border: 3px solid #000;
+    position: relative;
+  }
+  
+  .inputboxint {
+    margin-top: 12px;
+    width: 100%;
+    height: 300px;
+    border: 3px solid #000;
+  }
+
+  .modbutton {
+    width: 100%;
+    margin: 40px auto 0;
+    padding: 0;
+  }
+  
+  .okbutton {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    justify-content: space-around;
+  }
+  
+  .modify1 {
+    width: 140px;
+    height: 50px;
+    background-color: #ed5b4c;
+    border: 3px solid #000;
+    border-radius: 0;
+  }
+  
+  .modify2 {
+    width: 140px;
+    height: 50px;
+    background-color: #168fa4;
+    border: 3px solid #000;
+    border-radius: 0;
+  }
+  
+  button:disabled {
+    background: #000 !important;
+    border: 3px solid #000 !important;
   }
