--- a/css/0_index.css
+++ b/css/0_index.css
@@ -304,9 +304,9 @@ body {
     top: -8%;
   }
 
-.article-layout{
-  margin-bottom: 5rem;
-}
+  .article-layout {
+    margin-bottom: 5rem;
+  }
 
   .blog .inner-box {
     height: 50%;
@@ -475,7 +475,33 @@ body {
 
 .card {
   background: transparent;
+  transform: translateY(0);
+  transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
 }
+
+.card:hover {
+  transform: translateY(-20px);
+}
+
+.event-intro {
+  opacity: 0;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  padding: 20%;
+  color: #fff;
+  letter-spacing: 2.55px;
+  line-height: 1.5rem;
+  background-color: rgb(0, 0, 0, 0.7);
+  transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.card:hover .event-intro{
+  opacity: 1;
+}
+
+
 .card-top {
   background-color: #fac000;
   border: 3px solid black;
@@ -502,13 +528,12 @@ body {
 }
 
 .cat-label-music:before {
-  content:'音樂';
+  content: "音樂";
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: all 0.5s;
-
 }
 
 .cat-label-music:hover:before {
@@ -516,7 +541,7 @@ body {
 }
 
 .cat-label-music:after {
-  content: '去逛逛';
+  content: "去逛逛";
   position: absolute;
   top: calc(100% + 30px);
   left: 50%;
@@ -541,13 +566,12 @@ body {
 }
 
 .cat-label-ex:before {
-  content:'展覽';
+  content: "展覽";
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: all 0.5s;
-
 }
 
 .cat-label-ex:hover:before {
@@ -555,7 +579,7 @@ body {
 }
 
 .cat-label-ex:after {
-  content: '去逛逛';
+  content: "去逛逛";
   position: absolute;
   top: calc(100% + 30px);
   left: 50%;
@@ -580,13 +604,12 @@ body {
 }
 
 .cat-label-th:before {
-  content:'戲劇';
+  content: "戲劇";
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: all 0.5s;
-
 }
 
 .cat-label-th:hover:before {
@@ -594,7 +617,7 @@ body {
 }
 
 .cat-label-th:after {
-  content: '去逛逛';
+  content: "去逛逛";
   position: absolute;
   top: calc(100% + 30px);
   left: 50%;
@@ -669,13 +692,13 @@ body {
   left: 8%;
 }
 
-.like{
+.like {
   cursor: pointer;
 }
 
-.like.liked{
-    color: #ed5b4c;
-    font-weight: 900;
+.like.liked {
+  color: #ed5b4c;
+  font-weight: 900;
 }
 
 .punch {
