--- a/css/3_B2B-index.css
+++ b/css/3_B2B-index.css
@@ -22,9 +22,14 @@
 .indexcard {
   margin-top: 170px;
   width: 260px;
-  height: 500px;
+  height: 400px;
   /* background-color: #168fa4; */
   position: relative;
+  transition: 0.3s;
+}
+
+.indexcard:hover {
+  transform: translateY(-20px);
 }
 
 .titlecard {
@@ -111,10 +116,17 @@
 }
 
 .slogan p {
-  margin-top: -10px;
   margin-left: 48%;
   font-weight: 700;
   font-size: 34px;
+}
+
+.event {
+  color: #ed5b4c;
+}
+
+.slogan {
+  margin-top: 80px;
 }
 
 /* Media Query */
@@ -158,7 +170,7 @@
   }
 
   .indexcard {
-    margin-top: 10px;
+    margin-top: 20px;
     width: 170px;
     height: 225px;
     /* background-color: #168fa4; */
@@ -228,6 +240,7 @@
   }
 
   .slogan {
+    margin-top: -10px;
     width: 100%;
   }
 
