--- a/css/1_member-signup.css
+++ b/css/1_member-signup.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   outline: 1px solid red;
-} */
+}
 
 html {
   font-size: 20px;
@@ -9,6 +9,8 @@ html {
 body {
   height: 100vh;
   background-color: #002c80;
+  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .signup-list {
